--- a/imdex.html
+++ b/imdex.html
@@ -170,5 +170,49 @@
                     </div>
                 </div>
             </div>
+                       <!-- Course Details Section -->
+            <div class="container my-5">
+                <h2 class="text-center fw-bold mb-5">Our Popular Courses</h2>
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                    <!-- Course 1 -->
+                    <div class="col">
+                        <div class="card shadow-sm border-0">
+                            <img class="p-4" src="images/women1.jpg" class="card-img-top" alt="Computer Science">
+                            <div class="card-body">
+                                <h5 class="card-title fw-bold">Computer Science Fundamentals</h5>
+                                <p class="card-text">Learn the basics of programming, data structures, and algorithms to kickstart your tech career.</p>
+                            </div>
+                        </div>
+                    </div>         <!-- Course 2 -->
+                    <div class="col">
+                        <div class="card shadow-sm border-0">
+                            <img class="p-4"
+                            src="images/brunette-business-woman-with-wavy-long-hair-blue-eyes-stands-holding-notebook-hands.jpg" class="card-img-top" alt="Business Management">
+                            <div class="card-body">
+                                <h5 class="card-title fw-bold">Business Management 101</h5>
+                                <p class="card-text">A comprehensive course on modern business practices, marketing, and financial management.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Course 3 -->
+                    <div class="col">
+                        <div class="card shadow-sm border-0">
+                            <img class="p-4" src="images/portrait-confident-young-businessman-with-his-arms-crossed.jpg" class="card-img-top" alt="Graphic Design">
+                            <div class="card-body">
+                                <h5 class="card-title fw-bold">Graphic Design & Media</h5>
+                                <p class="card-text">Master the art of visual communication with a focus on design principles and industry-standard tools.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+
+
+
+
 
         </main>
