--- a/imdex.html
+++ b/imdex.html
@@ -206,6 +206,37 @@
                     </div>
                 </div>
             </div>
+                  <!-- Gallery Section -->
+            <div class="container my-5">
+                <h2 class="text-center fw-bold mb-5">Student Gallery</h2>
+                <div class="row g-4">
+                    <div class="col-6 col-md-4 col-lg-3">
+                        <img src="images/stu-3.jpg" class="img-fluid gallery-img shadow-sm" alt="Student in class">
+                    </div>
+                    <div class="col-6 col-md-4 col-lg-3">
+                        <img src="images/stu-4.jpg" class="img-fluid gallery-img shadow-sm" alt="Student studying">
+                    </div>
+                    <div class="col-6 col-md-4 col-lg-3">
+                        <img src="images/stu-1.jpg" class="img-fluid gallery-img shadow-sm" alt="Student presentation">
+                    </div>
+                    <div class="col-6 col-md-4 col-lg-3">
+                        <img src="images/stu-2.jpg" class="img-fluid gallery-img shadow-sm" alt="Student project">
+                    </div>
+                    <div class="col-6 col-md-4 col-lg-3">
+                        <img src="images/stu-5.jpg" class="img-fluid gallery-img shadow-sm" alt="Student graduation">
+                    </div>
+                    <div class="col-6 col-md-4 col-lg-3">
+                        <img src="images/stu-6.jpg" class="img-fluid gallery-img shadow-sm" alt="Student in library">
+                    </div>
+                    <div class="col-6 col-md-4 col-lg-3">
+                        <img src="images/stu-7.jpeg" class="img-fluid gallery-img shadow-sm" alt="Student collaboration">
+                    </div>
+                    <div class="col-6 col-md-4 col-lg-3">
+                        <img src="images/stu-8.jpg" class="img-fluid gallery-img shadow-sm" alt="Student in lab">
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
 
