--- a/imdex.html
+++ b/imdex.html
@@ -237,6 +237,10 @@
                 </div>
             </div>
         </div>
+         <!-- About Us Page Section -->
+        <div id="about-page" class="page-section">
+            <div class="container my-5">
+                <h1 class="text-center fw-bold mb-5">About Us</h1>
 
 
 
