--- a/imdex.html
+++ b/imdex.html
@@ -276,6 +276,12 @@
         <div id="about-page" class="page-section">
             <div class="container my-5">
                 <h1 class="text-center fw-bold mb-5">About Us</h1>
+                  <!-- About Company -->
+                <div class="about-company-section mb-5">
+                    <h2 class="fw-bold text-center mb-4">Our Institute's Story</h2>
+                    <p class="lead text-center">Founded in 1998, our institute has been a beacon of academic excellence for over two decades. We believe in a holistic approach to education, focusing not just on academic achievement but also on personal growth, character development, and social responsibility. Our dedicated faculty and innovative curriculum prepare students for the challenges of tomorrow.</p>
+                </div>
+
 
 
 
