--- a/imdex.html
+++ b/imdex.html
@@ -321,6 +321,15 @@
                             <p class="small text-muted">A dedicated educator with over 15 years of experience in physics and mathematics. He is passionate about making complex topics easy to understand.</p>
                         </div>
                     </div>
+                      <!-- Staff 2 -->
+                    <div class="col">
+                        <div class="p-4 bg-white rounded shadow-sm h-100">
+                            <img src="images/about us2.jpg" class="staff-img mb-3" alt="Sarah Chen">
+                            <h5 class="fw-bold mb-0">Sarah Chen</h5>
+                            <p class="text-muted">Lead Instructor, Arts</p>
+                            <p class="small text-muted">An award-winning artist and teacher. Sarah inspires creativity and fosters a love for the visual and performing arts in her students.</p>
+                        </div>
+                    </div>
 
 
 
