--- a/imdex.html
+++ b/imdex.html
@@ -330,6 +330,19 @@
                             <p class="small text-muted">An award-winning artist and teacher. Sarah inspires creativity and fosters a love for the visual and performing arts in her students.</p>
                         </div>
                     </div>
+                                     <!-- Staff 3 -->
+                    <div class="col">
+                        <div class="p-4 bg-white rounded shadow-sm h-100">
+                            <img src="images/about us3.jpg" class="staff-img mb-3" alt="David Rodriguez">
+                            <h5 class="fw-bold mb-0">David Rodriguez</h5>
+                            <p class="text-muted">Administrator & Mentor</p>
+                            <p class="small text-muted">David handles student support and career counseling. His positive attitude and guidance help students navigate their academic journey.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
 
 
