--- a/imdex.html
+++ b/imdex.html
@@ -342,7 +342,37 @@
                 </div>
             </div>
         </div>
-
+  <!-- Contact Us Page Section -->
+        <div id="contact-page" class="page-section">
+            <div class="container my-5">
+                <div class="contact-section">
+                    <h1 class="text-center fw-bold mb-5">Contact Us</h1>
+                    <div class="row justify-content-center">
+                        <div class="col-lg-8">
+                            <form>
+                                <div class="mb-3">
+                                    <label for="name" class="form-label">Full Name</label>
+                                    <input type="text" class="form-control" id="name" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="email" class="form-label">Email address</label>
+                                    <input type="email" class="form-control" id="email" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="subject" class="form-label">Subject</label>
+                                    <input type="text" class="form-control" id="subject" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="message" class="form-label">Message</label>
+                                    <textarea class="form-control" id="message" rows="5" required></textarea>
+                                </div>
+                                <button type="submit" class="btn btn-primary w-100 rounded-pill">Send Message</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
 
