--- a/imdex.html
+++ b/imdex.html
@@ -373,6 +373,24 @@
                 </div>
             </div>
         </div>
+         <!-- FAQ Page Section -->
+        <div id="faq-page" class="page-section">
+            <div class="container my-5">
+                <h1 class="text-center fw-bold mb-5">Frequently Asked Questions</h1>
+                <div class="accordion" id="faqAccordion">
+                    <!-- FAQ 1 -->
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button rounded" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                How can I apply for admission?
+                            </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#faqAccordion">
+                            <div class="accordion-body">
+                                You can apply for admission by filling out the online application form on our website or by visiting our campus for a physical form.
+                            </div>
+                        </div>
+                    </div>
 
 
 
