--- a/imdex.html
+++ b/imdex.html
@@ -309,85 +309,107 @@
                             social responsibility. Our dedicated faculty and innovative curriculum prepare students for
                             the challenges of tomorrow.</p>
                     </div>
-  <!-- Staff Profile Section -->
-                <h2 class="text-center fw-bold mb-5">Meet Our Team</h2>
-                <div class="row row-cols-1 row-cols-md-3 g-4 text-center">
-                    <!-- Staff 1 -->
-                    <div class="col">
-                        <div class="p-4 bg-white rounded shadow-sm h-100">
-                            <img src="images/about us 1.jpg" class="staff-img mb-3" alt="John Smith">
-                            <h5 class="fw-bold mb-0">John Smith</h5>
-                            <p class="text-muted">Head of Faculty, Science</p>
-                            <p class="small text-muted">A dedicated educator with over 15 years of experience in physics and mathematics. He is passionate about making complex topics easy to understand.</p>
+                    <!-- Staff Profile Section -->
+                    <h2 class="text-center fw-bold mb-5">Meet Our Team</h2>
+                    <div class="row row-cols-1 row-cols-md-3 g-4 text-center">
+                        <!-- Staff 1 -->
+                        <div class="col">
+                            <div class="p-4 bg-white rounded shadow-sm h-100">
+                                <img src="images/about us 1.jpg" class="staff-img mb-3" alt="John Smith">
+                                <h5 class="fw-bold mb-0">John Smith</h5>
+                                <p class="text-muted">Head of Faculty, Science</p>
+                                <p class="small text-muted">A dedicated educator with over 15 years of experience in
+                                    physics and mathematics. He is passionate about making complex topics easy to
+                                    understand.</p>
+                            </div>
                         </div>
-                    </div>
-                      <!-- Staff 2 -->
-                    <div class="col">
-                        <div class="p-4 bg-white rounded shadow-sm h-100">
-                            <img src="images/about us2.jpg" class="staff-img mb-3" alt="Sarah Chen">
-                            <h5 class="fw-bold mb-0">Sarah Chen</h5>
-                            <p class="text-muted">Lead Instructor, Arts</p>
-                            <p class="small text-muted">An award-winning artist and teacher. Sarah inspires creativity and fosters a love for the visual and performing arts in her students.</p>
+                        <!-- Staff 2 -->
+                        <div class="col">
+                            <div class="p-4 bg-white rounded shadow-sm h-100">
+                                <img src="images/about us2.jpg" class="staff-img mb-3" alt="Sarah Chen">
+                                <h5 class="fw-bold mb-0">Sarah Chen</h5>
+                                <p class="text-muted">Lead Instructor, Arts</p>
+                                <p class="small text-muted">An award-winning artist and teacher. Sarah inspires
+                                    creativity and fosters a love for the visual and performing arts in her students.
+                                </p>
+                            </div>
                         </div>
-                    </div>
-                                     <!-- Staff 3 -->
-                    <div class="col">
-                        <div class="p-4 bg-white rounded shadow-sm h-100">
-                            <img src="images/about us3.jpg" class="staff-img mb-3" alt="David Rodriguez">
-                            <h5 class="fw-bold mb-0">David Rodriguez</h5>
-                            <p class="text-muted">Administrator & Mentor</p>
-                            <p class="small text-muted">David handles student support and career counseling. His positive attitude and guidance help students navigate their academic journey.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-  <!-- Contact Us Page Section -->
-        <div id="contact-page" class="page-section">
-            <div class="container my-5">
-                <div class="contact-section">
-                    <h1 class="text-center fw-bold mb-5">Contact Us</h1>
-                    <div class="row justify-content-center">
-                        <div class="col-lg-8">
-                            <form>
-                                <div class="mb-3">
-                                    <label for="name" class="form-label">Full Name</label>
-                                    <input type="text" class="form-control" id="name" required>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="email" class="form-label">Email address</label>
-                                    <input type="email" class="form-control" id="email" required>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="subject" class="form-label">Subject</label>
-                                    <input type="text" class="form-control" id="subject" required>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="message" class="form-label">Message</label>
-                                    <textarea class="form-control" id="message" rows="5" required></textarea>
-                                </div>
-                                <button type="submit" class="btn btn-primary w-100 rounded-pill">Send Message</button>
-                            </form>
+                        <!-- Staff 3 -->
+                        <div class="col">
+                            <div class="p-4 bg-white rounded shadow-sm h-100">
+                                <img src="images/about us3.jpg" class="staff-img mb-3" alt="David Rodriguez">
+                                <h5 class="fw-bold mb-0">David Rodriguez</h5>
+                                <p class="text-muted">Administrator & Mentor</p>
+                                <p class="small text-muted">David handles student support and career counseling. His
+                                    positive attitude and guidance help students navigate their academic journey.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-         <!-- FAQ Page Section -->
-        <div id="faq-page" class="page-section">
-            <div class="container my-5">
-                <h1 class="text-center fw-bold mb-5">Frequently Asked Questions</h1>
-                <div class="accordion" id="faqAccordion">
-                    <!-- FAQ 1 -->
+            <!-- Contact Us Page Section -->
+            <div id="contact-page" class="page-section">
+                <div class="container my-5">
+                    <div class="contact-section">
+                        <h1 class="text-center fw-bold mb-5">Contact Us</h1>
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <form>
+                                    <div class="mb-3">
+                                        <label for="name" class="form-label">Full Name</label>
+                                        <input type="text" class="form-control" id="name" required>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="email" class="form-label">Email address</label>
+                                        <input type="email" class="form-control" id="email" required>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="subject" class="form-label">Subject</label>
+                                        <input type="text" class="form-control" id="subject" required>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="message" class="form-label">Message</label>
+                                        <textarea class="form-control" id="message" rows="5" required></textarea>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary w-100 rounded-pill">Send
+                                        Message</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- FAQ Page Section -->
+            <div id="faq-page" class="page-section">
+                <div class="container my-5">
+                    <h1 class="text-center fw-bold mb-5">Frequently Asked Questions</h1>
+                    <div class="accordion" id="faqAccordion">
+                        <!-- FAQ 1 -->
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button rounded" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    How can I apply for admission?
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                                data-bs-parent="#faqAccordion">
+                                <div class="accordion-body">
+                                    You can apply for admission by filling out the online application form on our
+                                    website or by visiting our campus for a physical form.
+                                </div>
+                            </div>
+                        </div>
+                         <!-- FAQ 2 -->
                     <div class="accordion-item">
-                        <h2 class="accordion-header" id="headingOne">
-                            <button class="accordion-button rounded" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                How can I apply for admission?
+                        <h2 class="accordion-header" id="headingTwo">
+                            <button class="accordion-button collapsed rounded" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                What courses do you offer?
                             </button>
                         </h2>
-                        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#faqAccordion">
+                        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqAccordion">
                             <div class="accordion-body">
-                                You can apply for admission by filling out the online application form on our website or by visiting our campus for a physical form.
+                                We offer a wide range of courses in science, arts, business, and technology. Please see our homepage for a list of popular courses.
                             </div>
                         </div>
                     </div>
