--- a/imdex.html
+++ b/imdex.html
@@ -445,6 +445,19 @@
                             </div>
                         </div>
                     </div>
+                          <!-- FAQ 4 -->
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingFour">
+                            <button class="accordion-button collapsed rounded" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                Do you provide career counseling?
+                            </button>
+                        </h2>
+                        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#faqAccordion">
+                            <div class="accordion-body">
+                                Yes, we have a dedicated career counseling and placement cell that assists students with career guidance and job placement.
+                            </div>
+                        </div>
+                    </div>
 
 
 
