--- a/imdex.html
+++ b/imdex.html
@@ -489,6 +489,12 @@
             </div>
         </div>
     </main>
+ <!-- Footer -->
+    <footer class="footer py-3 text-center">
+        <div class="container">
+            <p >&copy; 2025 ABC Educational Institute. All Rights Reserved.</p>
+        </div>
+    </footer>
 
 
 
@@ -498,5 +504,3 @@
 
 
 
-
-    </main>
