--- a/imdex.html
+++ b/imdex.html
@@ -495,6 +495,29 @@
             <p >&copy; 2025 ABC Educational Institute. All Rights Reserved.</p>
         </div>
     </footer>
+        <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        // Simple JS for single-page navigation
+        function showPage(pageId) {
+            // Hide all pages
+            const pages = document.querySelectorAll('.page-section');
+            pages.forEach(page => {
+                page.style.display = 'none';
+            });
+            // Show the selected page
+            document.getElementById(pageId + '-page').style.display = 'block';
+
+            // Update active nav link
+            const navLinks = document.querySelectorAll('.navbar-nav .nav-link');
+            navLinks.forEach(link => {
+                link.classList.remove('active');
+                link.removeAttribute('aria-current');
+            });
+            document.querySelector(`[onclick="showPage('${pageId}')"]`).classList.add('active');
+            document.querySelector(`[onclick="showPage('${pageId}')"]`).setAttribute('aria-current', 'page');
+        }
+    </script>
 
 
 
